Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74221

Client crashes on server restart for nullptr subclass

XMLWordPrintable

    • All
    • 7822c7b344d0ce251d221576eaf5824979385732 (qt/qtremoteobjects/5.12)

      When pointer types (model or class) are used in a rep file, and the pointers are nullptr, a client crash will occur if the source process restarts.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bstottle Brett Stottlemyer
            bstottle Brett Stottlemyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes