src/remoteobjects/qremoteobjectnode.cpp
@@ -1757,9 +1757,10 @@ QVariant QRemoteObjectNodePrivate::handlePointerToQObjectProperty(QConnectedRepl
     Q_ASSERT(property.canConvert<QRO_>());
     QRO_ childInfo = property.value<QRO_>();
     qROPrivDebug() << "QRO_:" << childInfo.name << replicas.contains(childInfo.name) << replicas.keys();
-    if (replicas.contains(childInfo.name) && childInfo.isNull) {
+    if (childInfo.isNull) {
         // Either the source has changed the pointer and we need to update it, or the source pointer is a nullptr
-        replicas.remove(childInfo.name);
+        if (replicas.contains(childInfo.name))
+            replicas.remove(childInfo.name);
         if (childInfo.type == ObjectType::CLASS)
             retval = QVariant::fromValue<QRemoteObjectDynamicReplica*>(nullptr);
         else
